cmake_minimum_required(VERSION 3.16)
project(nand2teris)

set(CMAKE_C_STANDARD 99)

add_executable(endian endian.c)
add_executable(hex hexadecimal.c)
add_executable(address address.c)
add_executable(cs2.5 2.5.c)
add_executable(cs2.7 2.7.c)
add_executable(cs2.8 2.8.c)
add_executable(cs2.9 2.9.c)
add_executable(cs2.10 2.10-11.c)
add_executable(cs2.17 2.17.c)
add_executable(cs2.18 2.18.c)
add_executable(cs2.19 2.19.c)
add_executable(cs2.23 2.23.c)
add_executable(cs2.25 2.25.c)
add_executable(cs2.26 2.26.c)
add_executable(cs2.28 2.28.c)
add_executable(cs2.29 2.29.c)
add_executable(cs2.30 2.30.c)
add_executable(cs2.34 2.34.c)
add_executable(cs2.45 2.45.c)